--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -76,7 +76,8 @@
         "typeinfo": "cpp",
         "valarray": "cpp",
         "queue": "cpp",
-        "aut-the-bus": "cpp"
+        "aut-the-bus": "cpp",
+        "stack": "cpp"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
